tests/fixtures/errors/e0102_unknown_module.mimz
// expect: E0102
module M {
  in a: bit
  out y: bit
  let u = Ghost() { a: a }
  y = u.z
}
